proxy-pattern-app

--- a/design-patterns/composite-pattern-app/assets/login.html
+++ b/design-patterns/composite-pattern-app/assets/login.html
@@ -8,6 +8,6 @@
 <input type="password"></input>
 </p>
 <p>
-<input type="submit" value="submit"></input>
+<input type="submit" value="login"></input>
 </p>
 </div>
