--- a/js-app/index.html
+++ b/js-app/index.html
@@ -2,12 +2,19 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, intitial-scale:1.0" />
+	<meta name="viewport" content="width=device-width, intitial-scale=1.0" />
 	<title>JS app</title>
+
 </head>
 
 <body>
 	<h1>Index of js-app!!</h1>
+	<div>
+		<h3>app-links</h3>
+		<p><a href="welcome-app.html">welcome-app</a></p>
+		<p><a href="task.html">task.html</a></p>
+		<p><a href="task2.html">task2.html</a></p>
+	</div>
 </body>
 
 </html>
