ajax, web worker, hoisting

--- a/js-app/index.html
+++ b/js-app/index.html
@@ -24,6 +24,10 @@
 		<p><a href="color.html">color.html</a></p>
 		<p><a href="color2.html">color2.html</a></p>
 		<p><a href="slider.html">slider.html</a></p>
+		<p><a href="blueball.html">blueball.html</a></p>
+		<p><a href="hoisting.html">hoisting.html</a></p>
+		<p><a href="xmlhttpreq.html">xmlhttprequest.html</a></p>
+		<p><a href="webworker.html">webworker.html</a></p>
 	</nav>
 </body>
 
