--- a/js-app/index.html
+++ b/js-app/index.html
@@ -18,16 +18,32 @@
 	<nav>
 		<h3>app-links</h3>
 		<p><a href="welcome-app.html">welcome-app</a></p>
-		<p><a href="task.html">task.html</a></p>
-		<p><a href="task2.html">task2.html</a></p>
-		<p><a href="task3.html">task3.html</a></p>
-		<p><a href="color.html">color.html</a></p>
-		<p><a href="color2.html">color2.html</a></p>
+		<details>
+			<summary>tasks</summary>
+			<ul>
+				<p><a href="task.html">task.html</a></p>
+				<p><a href="task2.html">task2.html</a></p>
+				<p><a href="task3.html">task3.html</a></p>
+			</ul>
+		</details>
+		<details>
+			<summary>colors</summary>
+			<ul>
+				<p><a href="color.html">color.html</a></p>
+				<p><a href="color2.html">color2.html</a></p>
+			</ul>
+		</details>
 		<p><a href="slider.html">slider.html</a></p>
 		<p><a href="blueball.html">blueball.html</a></p>
 		<p><a href="hoisting.html">hoisting.html</a></p>
-		<p><a href="xmlhttpreq.html">xmlhttprequest.html</a></p>
-		<p><a href="webworker.html">webworker.html</a></p>
+		<details>
+			<summary>event loop</summary>
+			<ul>
+				<p><a href="xmlhttpreq.html">xmlhttprequest.html</a></p>
+				<p><a href="webworker.html">webworker.html</a></p>
+			</ul>
+		</details>
+		<p><a href="questionbank/index.html">questionbank</a></p>
 	</nav>
 </body>
 
