jquery-app added

--- a/js-app/index.html
+++ b/js-app/index.html
@@ -44,6 +44,12 @@
 			</ul>
 		</details>
 		<p><a href="questionbank/index.html">questionbank</a></p>
+		<p><a href="modulepattern.html">module-pattern</a></p>
+		<p><a href="constructorpattern.html">constructor-pattern</a></p>
+		<p><a href="prototypepattern.html">prototype-pattern</a></p>
+		<p><a href="async.html">async-pattern</a></p>
+		<p><a href="async2.html">async2-pattern</a></p>
+		<p><a href="async3.html">async3-pattern</a></p>
 	</nav>
 </body>
 
