--- a/jquery-app/index.html
+++ b/jquery-app/index.html
@@ -11,6 +11,9 @@
 	<h1>Index of jQuery-app</h1>
 
 	<p><a href="welcome.html">welcome</a></p>
+	<p><a href="numberguessing.html">number guessing</a></p>
+	<p><a href="login.html">Login</a></p>
+	<p><a href="ajax.html">ajax</a></p>
 </body>
 
 </html>
