--- a/bootstrap-app/index.html
+++ b/bootstrap-app/index.html
@@ -8,6 +8,16 @@
 
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+	<style>
+		#logtab li a {
+			background-color: #313131;
+			outline: 0;
+		}
+
+		#logtab li a.active {
+			background-color: white;
+		}
+	</style>
 </head>
 
 <body class="bg-light">
@@ -30,42 +40,106 @@
 					</div>
 				</div>
 				<form class="form-inline">
-					<button class="btn btn-primary" data-target="#signinpg"
-						data-toggle="modal">
-						Sign In
+					<button type="button" class="btn btn-primary"
+						data-toggle="modal" data-target="#loginpage">
+						Log In
 					</button>
 				</form>
 			</div>
 		</nav>
 
-		<div id="signinpg" class="modal fade" role="sign-in/sign-up">
+		<div id="loginpage" class="modal fade" role="dialog" tabindex="-1"
+			aria-labelledby="loginpagelable" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered" role="document">
 				<div class="modal-content">
-					<div class="nav nav-tabs nav-fill" id="signingpage"
+					<ul class="nav nav-tabs nav-fill" id="logtab"
 						role="tablist">
-						<div class="nav-item">
-							<a class="nav-link active" data-toggle="tab"
-								href="#signin" aria-controls="siginin"
-								aria-selected="true" role="tab" id="signin-tab">
-								SignIn
+						<li class="nav-item">
+							<a class="nav-link active" id="login-tab"
+								data-toggle="tab" href="#login" role="tab"
+								aria-controls="login" aria-selected="true">
+								Log In
 							</a>
-						</div>
-						<div class="nav-item">
-							<a class="nav-link" data-toggle="tab" href="#signup"
-								aria-controls="signup" aria-selected="false"
-								role="tab" id="signup-tab">
-								Sign Up
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" id="register-tab"
+								data-toggle="tab" href="#register" role="tab"
+								aria-controls="register" aria-selected="false">
+								Register
 							</a>
+						</li>
+					</ul>
+
+					<div class="tab-content" id="logtabContent">
+						<div class="tab-pane fade show active text-center p-4"
+							id="login" role="tab-panel"
+							aria-labelledby="login-tab">
+							<h3 class="text-center">Log In</h3>
+							<form name="login" class="">
+								<div class="form-group">
+									<label class="sr-only" for="uid">
+										Email or Username
+									</label>
+									<input type="text" name="uid" id="uid"
+										class="form-control"
+										placeholder="Email or Username" />
+								</div>
+								<div class="form-group">
+									<label class="sr-only" for="passwd">
+										Password
+									</label>
+									<input type="password" name="passwd"
+										id="passwd" class="form-control"
+										placeholder="Password" />
+								</div>
+							</form>
+							<button type="button" id="btn-login"
+								class="btn btn-info btn-lg px-5">
+								Log In
+							</button>
 						</div>
-					</div>
-					<div class="tab-content" id="signingpageContent">
-						<div class="tab-pane fade show active" id="signin"
-							role="tab-panel" aria-labelledby="signin-tab">
-							sign in
-						</div>
-						<div class="tab-pane fade" id="signup" role="tab-panel"
-							aria-labelledby="signup-tab">
-							sign up
+
+						<div class="tab-pane fade text-center p-4" id="register"
+							role="tab-panel" aria-labelledby="register-tab">
+							<h3 class="text-center">Register</h3>
+							<form name="register">
+								<div class="form-group">
+									<label class="sr-only" for="uname">
+										Username
+									</label>
+									<input type="text" name="uname" id="uname"
+										class="form-control"
+										placeholder="Username" />
+								</div>
+								<div class="form-group">
+									<label class="sr-only" for="email">
+										Email
+									</label>
+									<input type="text" name="email" id="email"
+										class="form-control"
+										placeholder="Email" />
+								</div>
+								<div class="form-group">
+									<label class="sr-only" for="password">
+										Password
+									</label>
+									<input type="password" name="passwd"
+										id="password" class="form-control"
+										placeholder="Password" />
+									<p></p>
+									<label class="sr-only" for="confirmpasswd">
+										Confirm Password
+									</label>
+									<input type="password" name="confirmpasswd"
+										id="Confirm-password"
+										class="form-control"
+										placeholder="Confirm password" />
+								</div>
+							</form>
+							<button type="button" id="btn-register"
+								class="btn btn-info btn-lg px-5">
+								Register
+							</button>
 						</div>
 					</div>
 				</div>
