jquery tasks.html

--- a/bootstrap-app/index.html
+++ b/bootstrap-app/index.html
@@ -91,6 +91,15 @@
 									<input type="password" name="passwd"
 										id="passwd" class="form-control"
 										placeholder="Password" />
+									<div class="custom-control custom-checkbox">
+										<input type="checkbox"
+											name="lpassvisible" id="lpassv"
+											class="custom-control-input" />
+										<label for="lpassv"
+											class="custom-control-label">
+											show
+										</label>
+									</div>
 								</div>
 							</form>
 							<button type="button" id="btn-login"
