--- a/jquery-app/index.html
+++ b/jquery-app/index.html
@@ -14,6 +14,9 @@
 	<p><a href="numberguessing.html">number guessing</a></p>
 	<p><a href="login.html">Login</a></p>
 	<p><a href="ajax.html">ajax</a></p>
+	<p><a href="login2.html">Login 2</a></p>
+	<p><a href="bind.html">Bind</a></p>
+	<p><a href="tasks.html">tasks</a></p>
 </body>
 
 </html>
