angular bind and minified js

--- a/webservices-app/studentapi.html
+++ b/webservices-app/studentapi.html
@@ -53,7 +53,9 @@
 				<div class="col d-none d-md-block">date</div>
 				<div class="col d-none d-md-block">Gender</div>
 			</div>
-			<!-- content added by script -->
+			<div id="list">
+				<!-- content added by script -->
+			</div>
 		</div>
 
 		<!-- Add student button -->
