--- a/angularjs-app/index.html
+++ b/angularjs-app/index.html
@@ -15,6 +15,7 @@
 		<p><a href="event.html">Event</a></p>
 		<p><a href="eventDI.html">EventDI</a></p>
 		<p><a href="binding.html">Binding</a></p>
+		<p><a href="service.html">Service</a></p>
 	</div>
 </body>
 
