--- a/js-app/index.html
+++ b/js-app/index.html
@@ -35,6 +35,7 @@
 		</details>
 		<p><a href="slider.html">slider.html</a></p>
 		<p><a href="blueball.html">blueball.html</a></p>
+		<p><a href="blueball_oo/index.html">BlueBall OO</a></p>
 		<p><a href="hoisting.html">hoisting.html</a></p>
 		<details>
 			<summary>event loop</summary>
@@ -50,6 +51,7 @@
 		<p><a href="async.html">async-pattern</a></p>
 		<p><a href="async2.html">async2-pattern</a></p>
 		<p><a href="async3.html">async3-pattern</a></p>
+		<p><a href="async4.html">async4-pattern [promise]</a></p>
 	</nav>
 </body>
 
