blue ball game in angularjs

--- a/angularjs-app/index.html
+++ b/angularjs-app/index.html
@@ -16,6 +16,7 @@
 		<p><a href="eventDI.html">EventDI</a></p>
 		<p><a href="binding.html">Binding</a></p>
 		<p><a href="service.html">Service</a></p>
+		<p><a href="blueball/index.html">Blue Ball</a></p>
 	</div>
 </body>
 
