--- a/angularjs-app/index.html
+++ b/angularjs-app/index.html
@@ -22,6 +22,7 @@
 		<p><a href="customfilter.html">Filter</a></p>
 		<p><a href="task.html">Task</a></p>
 		<p><a href="student.html">Student</a></p>
+		<p><a href="wiki.html">Wiki</a></p>
 	</div>
 </body>
 
