--- a/angularjs-app/index.html
+++ b/angularjs-app/index.html
@@ -23,6 +23,8 @@
 		<p><a href="task.html">Task</a></p>
 		<p><a href="student.html">Student</a></p>
 		<p><a href="wiki.html">Wiki</a></p>
+		<p><a href="spa-app/index.html">spa</a></p>
+		<p><a href="emp-app/index.html">employee app</a></p>
 	</div>
 </body>
 
