--- a/angularjs-app/emp-app/index.html
+++ b/angularjs-app/emp-app/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div id="root" class="container">
+	<div id="root" class="container my-5">
 		<h1 class="h1">Employee app</h1>
 		<div ng-app="emp-app">
 			<div ng-view></div>
