product-app mvp

--- a/angularjs-app/index.html
+++ b/angularjs-app/index.html
@@ -25,6 +25,7 @@
 		<p><a href="wiki.html">Wiki</a></p>
 		<p><a href="spa-app/index.html">spa</a></p>
 		<p><a href="emp-app/index.html">employee app</a></p>
+		<p><a href="product-app/">product app</a></p>
 	</div>
 </body>
 
