--- a/angularjs-app/product-app/index.html
+++ b/angularjs-app/product-app/index.html
@@ -13,7 +13,7 @@
 	<div class="container" id="root" ng-app="product-app">
 		<div class="navbar nav-fill bg-light">
 			<div class="navbar-brand">
-				<span>Acme Product Management</span>
+				<a class="nav-link" href="#!/">Acme Product Management</a>
 			</div>
 			<div class="nav-item">
 				<a class="nav-link" href="#!/home">Home</a>
