--- a/angular/welcome-app/src/index.html
+++ b/angular/welcome-app/src/index.html
@@ -9,8 +9,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body>
-  <sw-welcome></sw-welcome>
+<body class="container">
+  <!-- <sw-welcome></sw-welcome> -->
+  <!-- <app-student></app-student> -->
+  <!-- <app-blueball></app-blueball> -->
+  <!-- <app-twoway></app-twoway> -->
+  <app-service-test></app-service-test>
 </body>
 
 </html>
