--- a/js-app/index.html
+++ b/js-app/index.html
@@ -52,6 +52,7 @@
 		<p><a href="async2.html">async2-pattern</a></p>
 		<p><a href="async3.html">async3-pattern</a></p>
 		<p><a href="async4.html">async4-pattern [promise]</a></p>
+		<p><a href="mapreduce.html">map reduce filter</a></p>
 	</nav>
 </body>
 
