--- a/angular/welcome-app/src/index.html
+++ b/angular/welcome-app/src/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>WelcomeApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+	<meta charset="utf-8">
+	<title>WelcomeApp</title>
+	<base href="/">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body class="container">
-  <!-- <sw-welcome></sw-welcome> -->
-  <!-- <app-student></app-student> -->
-  <!-- <app-blueball></app-blueball> -->
-  <!-- <app-twoway></app-twoway> -->
-  <app-service-test></app-service-test>
+	<!-- <sw-welcome></sw-welcome> -->
+	<!-- <app-student></app-student> -->
+	<!-- <app-blueball></app-blueball> -->
+	<!-- <app-twoway></app-twoway> -->
+	<!-- <app-service-test></app-service-test> -->
+	<!-- <app-numberapi></app-numberapi> -->
+	<app-parentchild></app-parentchild>
 </body>
 
 </html>
