angular question bank

--- a/angular/welcome-app/src/index.html
+++ b/angular/welcome-app/src/index.html
@@ -16,7 +16,8 @@
 	<!-- <app-twoway></app-twoway> -->
 	<!-- <app-service-test></app-service-test> -->
 	<!-- <app-numberapi></app-numberapi> -->
-	<app-parentchild></app-parentchild>
+	<!-- <app-parentchild></app-parentchild> -->
+	<app-questionbank></app-questionbank>
 </body>
 
 </html>
