--- a/angular/welcome-app/src/index.html
+++ b/angular/welcome-app/src/index.html
@@ -10,14 +10,7 @@
 </head>
 
 <body class="container">
-	<!-- <sw-welcome></sw-welcome> -->
-	<!-- <app-student></app-student> -->
-	<!-- <app-blueball></app-blueball> -->
-	<!-- <app-twoway></app-twoway> -->
-	<!-- <app-service-test></app-service-test> -->
-	<!-- <app-numberapi></app-numberapi> -->
-	<!-- <app-parentchild></app-parentchild> -->
-	<app-questionbank></app-questionbank>
+	<sw-welcome></sw-welcome>
 </body>
 
 </html>
