--- a/go/src/day10/swabhav.html
+++ b/go/src/day10/swabhav.html
@@ -1222,4 +1222,20 @@ to a batch size of no more than 10 students.</p>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <ul class="footer-nav">
                             <li><a href="http://swabhavtechlabs.com/sitemap.xml">Sitemap</a></li>
-                            <li><a href="http://swabhavtechlabs.com/privacy.ht
+                            <li><a href="http://swabhavtechlabs.com/privacy.html">Privacy Policy</a></li>
+                            <li><a href="http://swabhavtechlabs.com/contact-us.html">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+            <!-- End Copyright -->
+        </div>
+    </footer>
+<!-- End Footer -->
+</div>
+<script type=text/javascript async src=js/script.min.js></script>
+<a href=# class=back-to-top><i class="fa fa-angle-up"></i></a>
+
+</body>
+</html>
