--- a/go/src/day10/golang.html
+++ b/go/src/day10/golang.html
@@ -212,4 +212,82 @@ func main() {
         var extract = document.createElement("div");
         extract.className = "Blog-extract";
         extract.innerHTML = entry.Summary;
-        // Ensure
+        // Ensure any cross-origin links have rel=noopener set.
+        var links = extract.querySelectorAll("a");
+        for (var j = 0; j < links.length; j++) {
+          links[j].rel = "noopener";
+          links[j].classList.add("Blog-link");
+        }
+        read.parentNode.insertBefore(extract, read);
+        var when = document.createElement("div");
+        when.className = "Blog-when";
+        when.textContent = "Published " + readableTime(entry.Time);
+        read.parentNode.insertBefore(when, read);
+      }
+    }
+
+    window.initFuncs.push(function() {
+      // Load blog feed.
+      $("<script/>")
+        .attr("src", "//blog.golang.org/.json?jsonp=feedLoaded")
+        .appendTo("body");
+
+      // Set the video at random.
+      var videos = [
+        {
+          s: "https://www.youtube.com/embed/rFejpH_tAHM",
+          title: "dotGo 2015 - Rob Pike - Simplicity is Complicated",
+        },
+        {
+          s: "https://www.youtube.com/embed/0ReKdcpNyQg",
+          title: "GopherCon 2015: Robert Griesemer - The Evolution of Go",
+        },
+        {
+          s: "https://www.youtube.com/embed/sX8r6zATHGU",
+          title: "Steve Francia - Go: building on the shoulders of giants and stepping on a few toes",
+        },
+        {
+          s: "https://www.youtube.com/embed/rWJHbh6qO_Y",
+          title: "Brad Fitzpatrick Go 1.11 and beyond",
+        },
+        {
+          s: "https://www.youtube.com/embed/bmZNaUcwBt4",
+          title: "The Why of Go",
+        },
+        {
+          s: "https://www.youtube.com/embed/0Zbh_vmAKvk",
+          title: "GopherCon 2017: Russ Cox - The Future of Go",
+        },
+      ];
+      var v = videos[Math.floor(Math.random()*videos.length)];
+      $(".js-videoContainer iframe").attr("src", v.s).attr("title", v.title);
+    });
+   
+})();
+</script>
+
+
+</div><!-- .container -->
+</main><!-- #page -->
+<footer>
+  <div class="Footer ">
+    <img class="Footer-gopher" src="/lib/godoc/images/footer-gopher.jpg" alt="The Go Gopher">
+    <ul class="Footer-links">
+      <li class="Footer-link"><a href="/doc/copyright.html">Copyright</a></li>
+      <li class="Footer-link"><a href="/doc/tos.html">Terms of Service</a></li>
+      <li class="Footer-link"><a href="http://www.google.com/intl/en/policies/privacy/">Privacy Policy</a></li>
+      <li class="Footer-link"><a href="http://golang.org/issues/new?title=x/website:" target="_blank" rel="noopener">Report a website issue</a></li>
+    </ul>
+    <a class="Footer-supportedBy" href="https://google.com">Supported by Google</a>
+  </div>
+</footer>
+
+<script>
+(function() {
+  var ga = document.createElement("script"); ga.type = "text/javascript"; ga.async = true;
+  ga.src = ("https:" == document.location.protocol ? "https://ssl" : "http://www") + ".google-analytics.com/ga.js";
+  var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(ga, s);
+})();
+</script>
+
+
